--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,49 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body{
+    background: green;
+    box-sizing: border-box;
+  }
+  
+  .card{
+    
+    text-align: center;
+    background: white;
+    margin: auto;
+    font-size: 80px;
+    height: 200px;
+    width: 250px;
+    padding: 20px;
+    padding-top: 120px;
+    border: 1px solid black;
+    border-radius: 10px;
+    position: relative;
+    
+    &:before{
+      
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      font-size: 60px;
+      
+    }
+  
+    &:after{
+      
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      font-size: 60px;
+    }
+  
+    
+  
+    &.spade:before, &.spade:after {content: '\2660';}
+    &.club:before, &.club:after {content: '\2663';} 
+    &.heart:before, &.heart:after {content: '\2665'; color: red;} 
+    &.diamond:before, &.diamond:after {content: '\2666';color: red;}
+  
+  
+  
+  }
+  
+  
+  
